<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/my_list"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/my_list"
        android:icon="@drawable/ic_my_list"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/my_cars"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/my_cars"
        android:icon="@drawable/ic_my_car"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/main"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/add_list"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:orderInCategory="2"/>
</menu>